# This file is part of Hashlife3d.
#
# Hashlife3d is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hashlife3d is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Hashlife3d.  If not, see <https://www.gnu.org/licenses/>
[package]
name = "hashlife3d"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]

[build-dependencies]
bindgen = "0.29.1"
pkg-config = "0.3.12"
glsl-to-spirv = "0.1.6"

[dependencies]
libc = "0.2"
inflate = "0.4.3"
