# This file is part of Hashlife3d.
#
# Hashlife3d is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hashlife3d is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Hashlife3d.  If not, see <https://www.gnu.org/licenses/>
[package]
name = "hashlife3d"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]

[workspace]
members = [
    "voxels-base",
    "voxels-image",
    "voxels-image-base",
    "voxels-image-png",
    "voxels-math",
    "voxels-renderer",
    "voxels-renderer-base",
    "voxels-renderer-gles2",
    "voxels-renderer-vulkan",
    "voxels-resources",
    "voxels-sdl",
]

[dependencies]
voxels-sdl = { path = "voxels-sdl", features = ["no_main"] }
voxels-base = { path = "voxels-base" }
voxels-math = { path = "voxels-math" }
voxels-image = { path = "voxels-image" }
voxels-renderer = { path = "voxels-renderer" }
voxels-resources = { path = "voxels-resources" }
enum-map = "0.4"
quantiles = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_test = "1.0"

[profile.release]
debug = true
lto = "thin"
