[package]
name = "voxels-renderer-base"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]

[lib]
crate-type = ["rlib"]

[dependencies]
num-traits = "0.2"
voxels-math = { path = "../voxels-math" }
voxels-image = { path = "../voxels-image" }
voxels-sdl = { path = "../voxels-sdl" }
